# ClusterNova

./: CMakeLists.txt  README.md  README.md:Zone.Identifier
cuda/: assign_kernel.cu  distance_kernel.cu
include/: genetic_kmeans.h  kmeans.h
results/: bench.csv
scripts/: benchmark.sh  plot_results.py
src/: genetic_kmeans.cpp  kmeans.cpp  main.cpp  parallel_gka.cpp
